# cryptology

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  sonar-project.properties
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  sonar-scan.yml
cryptology/cpp/: utils.cpp
cryptology/cpp/algebra/: algorithms.cpp  matrix.cpp  residue_class.cpp  vector.cpp
cryptology/cpp/analysis/: analysis.cpp  statistics.cpp
cryptology/cpp/ciphers/: affine_cipher.cpp  hill_cipher.cpp  vigenere_cipher.cpp
cryptology/cpp/modular_arithmetic/: residue_class.cpp
cryptology/include/: cryptology.hpp
cryptology/include/cryptology/: utils.hpp
cryptology/include/cryptology/algebra/: algorithms.hpp  matrix.hpp  residue_class.hpp  vector.hpp
cryptology/include/cryptology/analysis/: analysis.hpp  frequencies.hpp  statistics.hpp
cryptology/include/cryptology/analysis/cipher_attacks/: affine_cipher_attacks.hpp  hill_cipher_attacks.hpp  spn_attacks.hpp  vigenere_cipher_attacks.hpp
cryptology/include/cryptology/analysis/linear_attack/: linear_approximation.hpp  linear_attack_worker.hpp  linear_trace.hpp
cryptology/include/cryptology/ciphers/: affine_cipher.hpp  hill_cipher.hpp  stream_cipher.hpp
cryptology/include/cryptology/ciphers/key_schedules/: key_schedules.hpp
cryptology/include/cryptology/ciphers/sp_network/: pbox.hpp  sbox.hpp  sp_network.hpp
cryptology/include/cryptology/utils/: dynamic_bitset.hpp  utils.hpp
cryptology/src/: utils.cpp
cryptology/src/algebra/: algorithms.cpp  matrix.cpp  residue_class.cpp  vector.cpp
cryptology/src/analysis/: analysis.cpp  statistics.cpp
cryptology/src/analysis/linear_attack/: linear_attack_worker.cpp  linear_trace.cpp
cryptology/src/ciphers/: affine_cipher.cpp  hill_cipher.cpp  stream_cipher.cpp
cryptology/src/ciphers/sp_network/: pbox.cpp  sbox.cpp  sp_network.cpp
cryptology/src/utils/: dynamic_bitset.cpp  utils.cpp
cryptology/tests/algebra/: test_algorithms.cpp  test_matrix.cpp  test_vector.cpp
cryptology/tests/ciphers/: test_affine_cipher.cpp  test_hill_cipher.cpp  test_stream_cipher.cpp
cryptology/tests/utils/: test_dynamic_bitset.cpp  test_utils.cpp
examples/: affine_cipher_example.cpp  algorithms_and_algebra_example.cpp  hill_cipher_example.cpp  spn_cipher_example.cpp  stream_ciphers_example.cpp  vigenere_cipher_example.cpp
include/cryptology/: utils.hpp
include/cryptology/algebra/: algorithms.hpp  matrix.hpp  residue_class.hpp  vector.hpp
include/cryptology/analysis/: frequencies.hpp  statistics.hpp
include/cryptology/ciphers/: affine_cipher.hpp  hill_cipher.hpp  stream_cipher.hpp  vigenere_cipher.hpp
include/cryptology/modular_arithmetic/: residue_class.hpp
